flexbox_exercise/style.css
body {
    margin: 0;
    padding: 0;
}

.sidebar, .sidelink, .bottom {
    display: flex;
    flex-direction: column;
}

.sidebar {
    width: 200px;
    height: 100vh;
    justify-content: space-between;
}

.sidelink {
    text-align: center;
}

.sidebar a {
    color : #2b2b2b;
    text-decoration: none;
    border: 1px solid black;
    padding: 1.5ch;
}

.sidebar a:hover {
    transition-delay: 300ms;
    color: #2b2bb2;
}

.bottom {
    align-items: center;
}

